--- a/src/pages/signin.astro
+++ b/src/pages/signin.astro
@@ -8,7 +8,7 @@ const title = "Sign in";
     <h1
       class="font-semibold text-2xl dark:text-zinc-100 text-zinc-900 w-full mb-1"
     >
-      {title}
+      {title} {process.env.VERCEL_URL}
     </h1>
     <p class="dark:text-zinc-400 text-zinc-500 text-sm mb-8 w-full">
       New to demo? <a
