--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -1,9 +1,13 @@
 ---
 import AstroIcon from "../icons/AstroIcon.astro";
+import { supabase } from "../lib/supabase";
 import Base from "../layout/Base.astro";
 const { email } = Astro.locals;
 
-const foo = JSON.stringify(Astro.locals, null, 2);
+const { data, error } = await supabase.auth.getSession()
+
+const d = JSON.stringify(data, null, 2);
+const e = JSON.stringify(error, null, 2);
 ---
 
 <Base title="Dashboard">
@@ -14,7 +18,10 @@ const foo = JSON.stringify(Astro.locals, null, 2);
   </p>
   Hello
  <pre>
-    {foo}
+    {d}
+ </pre>
+ <pre>
+    {e}
  </pre>
   <p class="max-w-prose text-lg dark:text-zinc-100">
     This is a protected page. You can only see this if you are logged in.
