--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -4,7 +4,7 @@ import { supabase } from "../lib/supabase";
 import Base from "../layout/Base.astro";
 const { email } = Astro.locals;
 
-const x = await supabase.auth.session.user
+const x = Astro.cookies.get("session");
 
 const d = JSON.stringify(x, null, 2);
 const e = null
