--- a/src/pages/dashboard.astro
+++ b/src/pages/dashboard.astro
@@ -17,12 +17,12 @@ const e = null
     {email}
   </p>
   Hello
- <pre>
+<code>
     {d}
- </pre>
- <pre>
+  </code>
+ <code>
     {e}
- </pre>
+ </code>
   <p class="max-w-prose text-lg dark:text-zinc-100">
     This is a protected page. You can only see this if you are logged in.
   </p>
